[package]
name = "ws-cli"
version = "0.1.0"
edition = "2021"
authors = ["Uriah <codeitlikemiley@gmail.com>"]
description = "Manage your workspace with ease"
readme = "README.md"
license = "MIT"
keywords = ["workspace", "cli", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive", "string"] }
toml_edit = "0.21.0"

[package.metadata.bundle]
name = "ws-cli"                                                              # The name of your application
identifier = "com.codeitlikemiley.ws-cli"                                    # The bundle identifier of your application
copyright = "Copyright (c) codeitlikemiley 2023. All rights reserved."
category = "Developer Tool"
short_description = "A Workspace CLI for managing GRPC Server Workspace"
long_description = "A Workspace CLI for managing GRPC Server Workspace"
version = "0.1.0"                                                        # Version of your application
osx_url_schemes = ["com.codeitlikemiley.ws-cli"]
script = "scripts/postinstall"                                           # Path to your postinstall script

[profile.release]
lto = true
codegen-units = 1
strip = true
